<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical"
	android:background="#fafafa"
	>
	<!-- 타이틀바 {{ -->
	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:background="@drawable/bg_titlebar"
		android:gravity="center_vertical"
		>
		<TextView
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:layout_marginLeft="10dip"
			android:text="@string/app_name"
			android:textSize="15sp"
			android:textStyle="bold"
			android:textColor="#ffffff"
			/>
	</LinearLayout>
	<!-- }} 타이틀바 -->
	
	<ScrollView
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		>
		<!-- 전체영역 {{ -->
		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			>
			<Button
				android:id="@+id/btn_play_piano"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="5dip"
				android:text="@string/title_piano_play"
				/>
				
			<TextView
				android:id="@+id/txt_about_button"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_margin="5dip"
				android:textColor="#333333"
				/>
				
			<Button
				android:id="@+id/btn_change_settings"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				/>
			<EditText
				android:id="@+id/input_test"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:hint="@string/txt_hint_test"
				android:textSize="12sp"
				android:visibility="gone"
				/>
				
			<!-- 피아노 키보드 사용하기 {{ -->
			<TextView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="10dip"
				android:padding="5dip"
				android:text="@string/title_guide"
				android:textColor="#ffffff"
				android:background="#6c737d"
				/>
			<TextView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:padding="5dip"
				android:text="@string/txt_guide_1"
				android:textColor="#333333"
				/>
			<TextView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:padding="5dip"
				android:text="@string/txt_guide_2"
				android:textColor="#333333"
				android:background="#fafada"
				/>
			<TextView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:padding="5dip"
				android:text="@string/txt_guide_3"
				android:textColor="#333333"
				/>
			<TextView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:paddingLeft="15dip"
				android:paddingTop="5dip"
				android:paddingRight="5dip"
				android:paddingBottom="5dip"
				android:text="@string/txt_guide_3_1"
				android:textColor="#333333"
				android:background="#fafada"
				/>
			<TextView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:paddingLeft="15dip"
				android:paddingTop="5dip"
				android:paddingRight="5dip"
				android:paddingBottom="5dip"
				android:text="@string/txt_guide_3_2"
				android:textColor="#333333"
				/>
			<TextView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:paddingLeft="15dip"
				android:paddingTop="5dip"
				android:paddingRight="5dip"
				android:paddingBottom="5dip"
				android:text="@string/txt_guide_3_3"
				android:textColor="#333333"
				android:background="#fafada"
				/>
			<TextView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:padding="5dip"
				android:text="@string/txt_guide_4"
				android:textColor="#333333"
				/>
			<TextView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:padding="5dip"
				android:text="@string/txt_guide_5"
				android:textColor="#333333"
				android:background="#fafada"
				/>
			<TextView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:padding="5dip"
				android:text="@string/txt_guide_6"
				android:textColor="#333333"
				/>
			<TextView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:padding="5dip"
				android:text="@string/txt_guide_7"
				android:textColor="#333333"
				android:background="#fafada"
				/>
			<!-- }} 피아노 키보드 사용하기 -->
		</LinearLayout>
		<!-- 전체영역 -->
	</ScrollView>
	
</LinearLayout>
