<?xml version="1.0" encoding="utf-8"?>
<!--
/* 
**
** Copyright 2008, The Android Open Source Project
**
** Licensed under the Apache License, Version 2.0 (the "License"); 
** you may not use this file except in compliance with the License. 
** You may obtain a copy of the License at 
**
**     http://www.apache.org/licenses/LICENSE-2.0 
**
** Unless required by applicable law or agreed to in writing, software 
** distributed under the License is distributed on an "AS IS" BASIS, 
** WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. 
** See the License for the specific language governing permissions and 
** limitations under the License.
*/
-->

<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical"
	android:background="#fafafa"
	>
	<!-- 타이틀바 {{ -->
	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:background="@drawable/bg_titlebar"
		android:gravity="center_vertical"
		>
		<TextView
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:layout_marginLeft="10dip"
			android:text="@string/title_setting"
			android:textSize="18sp"
			android:textStyle="bold"
			android:textColor="#ffffff"
			/>
		<Button
			android:id="@+id/btn_close"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginRight="5dip"
			android:layout_marginTop="2dip"
			android:text="@string/btn_close"
			android:textColor="#333333"
			/>
	</LinearLayout>
	<!-- }} 타이틀바 -->
	
	<ScrollView
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		>
		<!-- 전체영역 {{ -->
		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			>
			<!-- 소리 재생 모드 설정 {{ -->
			<TextView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:padding="5dip"
				android:text="@string/subtitle_sound"
				android:textColor="#ffffff"
				android:background="#6c737d"
				/>
			<RadioGroup
				android:id="@+id/radiobtn_sound"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="5dip"
				android:gravity="center_vertical"
				android:orientation="horizontal"
				>
				<RadioButton
					android:id="@+id/radiobtn_sound_recommended"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:text="@string/txt_sound_recommended"
					android:textColor="#333333"
					/>
				<RadioButton
					android:id="@+id/radiobtn_sound_original"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:text="@string/txt_sound_original"
					android:textColor="#333333"
					/>
				<RadioButton
					android:id="@+id/radiobtn_sound_none"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:text="@string/txt_sound_none"
					android:textColor="#333333"
					/>
			</RadioGroup>
			<CheckBox
				android:id="@+id/checkbox_nosound"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="10dip"
				android:text="@string/txt_sound_notice_nosound"
				android:textColor="#333333"
				/>
			<TextView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="10dip"
				android:layout_marginBottom="5dip"
				android:text="@string/txt_sound_notice"
				android:textColor="#777777"
				/>
			<!-- }} 소리 재생 모드 설정 -->
			
			<!-- 키보드 목록 {{ -->
			<TextView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:padding="5dip"
				android:text="키보드 목록"
				android:textColor="#ffffff"
				android:background="#6c737d"
				/>
			<LinearLayout
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				>
				<LinearLayout
					android:id="@+id/list_keyboard"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:layout_marginLeft="5dip"
					android:orientation="vertical"
					/>
				<TextView
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:layout_marginRight="5dip"
					android:layout_gravity="center_vertical"
					android:text="@string/txt_notice_custom"
					android:textColor="#777777"
					/>
			</LinearLayout>
			<!-- }} 키보드 목록 -->

			<!-- 사용자 정의 키보드 목록 {{ -->				
			<TextView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="5dip"
				android:padding="5dip"
				android:text="@string/subtitle_custom_keyboard"
				android:textColor="#ffffff"
				android:background="#6c737d"
				/>
			<LinearLayout
				android:id="@+id/list_custom"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical"
				/>
			<!-- }} 사용자 정의 키보드 목록 -->
			
			<!-- 사용자 정의 키보드 추가 {{ -->
			<Button
				android:id="@+id/btn_add_custom"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="2dip"
				android:layout_marginBottom="5dip"
				android:text="@string/btn_add_custom_keyboard"
				/>
			<!-- }} 사용자 정의 키보드 추가 -->
			
		</LinearLayout>
		<!-- }} 전체영역 -->
	</ScrollView>
			
</LinearLayout>
