<?xml version="1.0" encoding="utf-8"?>
<!--
/* 
**
** Copyright 2008, The Android Open Source Project
**
** Licensed under the Apache License, Version 2.0 (the "License"); 
** you may not use this file except in compliance with the License. 
** You may obtain a copy of the License at 
**
**     http://www.apache.org/licenses/LICENSE-2.0 
**
** Unless required by applicable law or agreed to in writing, software 
** distributed under the License is distributed on an "AS IS" BASIS, 
** WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. 
** See the License for the specific language governing permissions and 
** limitations under the License.
*/
-->

<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical"
	android:background="#fafafa"
	>
	<!-- 타이틀바 {{ -->
	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:background="@drawable/bg_titlebar"
		android:gravity="center_vertical"
		>
		<TextView
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:layout_marginLeft="10dip"
			android:text="@string/title_custom_keyboard"
			android:textSize="15sp"
			android:textStyle="bold"
			android:textColor="#ffffff"
			/>
		<Button
			android:id="@+id/btn_save"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="2dip"
			android:text="@string/btn_save"
			android:textColor="#333333"
			/>
		<Button
			android:id="@+id/btn_cancel"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginRight="5dip"
			android:layout_marginTop="2dip"
			android:text="@string/btn_cancel"
			android:textColor="#333333"
			/>
	</LinearLayout>
	<!-- }} 타이틀바 -->
	
	<ScrollView
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		>
		<!-- 전체영역 {{ -->
		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			>
			<!-- 제목 입력 {{ -->
			<EditText
				android:id="@+id/name_custom"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="2dip"
				android:hint="@string/txt_input_title"
				/>
			<!-- }} 제목 입력 -->
			
			<!-- 키보드 영역 {{ -->
			<com.teuskim.pianokeyboard.PianoKeyboardView	
				android:id="@+id/keyboard_view"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				/>
			<!-- }} 키보드 영역 -->
			
			<!-- 키맵 제목 {{ -->
			<TextView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="5dip"
				android:padding="5dip"
				android:text="@string/subtitle_custom_keyboard_keymap"
				android:textColor="#ffffff"
				android:background="#6c737d"
				/>
			<!-- }} 키맵 제목 -->
			
			<!-- 키맵 목록 {{ -->
			<LinearLayout
				android:id="@+id/keymap_list"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical"
				>
				<TextView
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:layout_marginTop="5dip"
					android:layout_marginLeft="10dip"
					android:text="@string/txt_no_keymap"
					android:textColor="#333333"
					/>
			</LinearLayout>
			<!-- }} 키맵 목록 -->
			
			<!-- 버튼 영역 {{ -->
			<LinearLayout
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="5dip"
				>
				<Button
					android:id="@+id/btn_custom_recommend"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:text="@string/btn_custom_recommend"
					/>
				<Button
					android:id="@+id/btn_custom_reset"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:text="@string/btn_custom_reset"
					android:visibility="gone"
					/>
			</LinearLayout>
			<!-- }} 버튼 영역 -->
			
		</LinearLayout>
		<!-- }} 전체영역 -->
	</ScrollView>
	
</LinearLayout>
